--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "bybitt",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@supabase/supabase-js": "^2.48.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "firebase": "^11.2.0",
+    "googleapis": "^144.0.0",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.9.5",
+    "next": "^15.1.5",
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
+    "resend": "^4.1.1",
+    "zod": "^3.24.1"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.5",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "22.10.7",
+    "@types/react": "19.0.7",
+    "@types/tailwindcss": "^3.1.0",
+    "typescript": "5.7.3"
   }
 }
