--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.48.1",
+    "autoprefixer": "^10.4.20",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -12,11 +13,13 @@
     "next": "^15.1.5",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "resend": "^4.1.1",
+    "tailwindcss": "^4.0.3",
     "zod": "^3.24.1"
   },
   "scripts": {
