--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "start": "next start"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/tailwindcss": "^3.1.0",
